opam-version: "1.2"
name: "reddit"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-reddit"
doc: "https://vbmithr.github.io/ocaml-reddit/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-reddit.git"
bug-reports: "https://github.com/vbmithr/ocaml-reddit/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "jbuilder" {build}
]
depopts: []
build: [ "jbuilder" "build" "@install" ]
